--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <a href="index.html">Tech & things</a>
                     </div>
                     <ul class="navigation">
-                        <li><a href="" class="active">Productos</a></li>
-                        <li><a href="">Categorías</a></li>
-                        <li><a href="">Promociones</a></li>
+                        <li><a href="#" class="active">Productos</a></li>
+                        <li><a href="#">Categorías</a></li>
+                        <li><a href="#">Promociones</a></li>
                     </ul>
                 </div>
                 <div id="header-cart">
@@ -109,14 +109,14 @@
             <div class="layout-container">
                 <!--NAVEGACIÓN SECUNDARIA-->
                 <ul class="navigation secundaria">
-                    <li><a href="" class="active">Todos</a></li>
-                    <li><a href="">Celulares</a></li>
-                    <li><a href="">Notebooks</a></li>
-                    <li><a href="">Periféricos PC</a></li>
+                    <li><a href="#" class="active">Todos</a></li>
+                    <li><a href="#">Celulares</a></li>
+                    <li><a href="#">Notebooks</a></li>
+                    <li><a href="#">Periféricos PC</a></li>
                 </ul>
 
                 <!--CARDS-->
-                <span class="subtitle margin-subtitle">Celulares</span>
+                <span class="subtitle margin-subtitle">Destacados</span>
                 <h1 class="h1 margin-h1">Productos</h1>
                 <div class="cards-container" id="products">
                     <!-- <div class="card">
