--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
             <div class="layout-container">
                 <!--NAVEGACIÓN SECUNDARIA-->
                 <ul class="navigation secundaria">
-                    <li><a href="#" class="active">Todos</a></li>
-                    <li><a href="#">Celulares</a></li>
-                    <li><a href="#">Notebooks</a></li>
-                    <li><a href="#">Periféricos PC</a></li>
+                    <li><a href="#productos" id="Todos" class="category-button active">Todos</a></li>
+                    <li><a href="#productos" id="Celulares" class="category-button">Celulares</a></li>
+                    <li><a href="#productos" id="Notebooks" class="category-button">Notebooks</a></li>
+                    <li><a href="#productos" id="Periféricos PC" class="category-button">Periféricos PC</a></li>
                 </ul>
 
                 <!--CARDS-->
-                <span class="subtitle margin-subtitle">Destacados</span>
+                <span class="subtitle margin-subtitle" id="titulo-categoria">Destacados</span>
                 <h1 class="h1 margin-h1">Productos</h1>
                 <div class="cards-container" id="products">
                     <!-- <div class="card">
