--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                                 <path
                                     d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
                             </svg>
-                            <span class="header-cart-count" data-header-cart-count="0"></span>
+                            <span class="header-cart-count" id="cart-count" data-header-cart-count="0"></span>
                         </div>
-                        <span data-header-cart-price="0">$1000</span>
+                        <span id="cart-total">$0</span>
                     </a>
                 </div>
             </div>
