--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                     </div>
                     <ul class="navigation">
                         <li><a href="#" class="active">Productos</a></li>
-                        <li><a href="#">Categorías</a></li>
-                        <li><a href="#">Promociones</a></li>
+                        <li><a href="javascript:void(0)">Categorías</a></li>
+                        <li><a href="javascript:void(0)">Promociones</a></li>
                     </ul>
                 </div>
                 <div id="header-cart">
-                    <a href="#" class="header-cart-info">
+                    <a href="javascript:void(0)" class="header-cart-info">
                         <div class="header-cart-icon">
                             <svg class="icon-logo" xmlns="http://www.w3.org/2000/svg" width="46" height="46"
                                 viewBox="0 0 48 48">
@@ -59,7 +59,7 @@
         <div class="layout-container">
             <!--BANNER-->
             <div class="banner">
-                <a href="#">
+                <a href="javascript:void(0)">
                     <img src="assets/imgs/banner-2.jpg" alt="" id="img-banner">
                 </a>
             </div>
@@ -109,10 +109,10 @@
             <div class="layout-container">
                 <!--NAVEGACIÓN SECUNDARIA-->
                 <ul class="navigation secundaria">
-                    <li><a href="#productos" id="Todos" class="category-button active">Todos</a></li>
-                    <li><a href="#productos" id="Celulares" class="category-button">Celulares</a></li>
-                    <li><a href="#productos" id="Notebooks" class="category-button">Notebooks</a></li>
-                    <li><a href="#productos" id="Periféricos PC" class="category-button">Periféricos PC</a></li>
+                    <li><a href="javascript:void(0)" id="Todos" class="category-button active">Todos</a></li>
+                    <li><a href="javascript:void(0)" id="Celulares" class="category-button">Celulares</a></li>
+                    <li><a href="javascript:void(0)" id="Notebooks" class="category-button">Notebooks</a></li>
+                    <li><a href="javascript:void(0)" id="Periféricos PC" class="category-button">Periféricos PC</a></li>
                 </ul>
 
                 <!--CARDS-->
