--- a/index.html
+++ b/index.html
@@ -119,135 +119,10 @@
                 <span class="subtitle margin-subtitle" id="titulo-categoria">Destacados</span>
                 <h1 class="h1 margin-h1">Productos</h1>
                 <div class="cards-container" id="products">
-                    <!-- <div class="card">
-                        <div class="card-img">
-                            <img src="assets/imgs/iphone-12.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <span class="margin-card">Celulares</span>
-                            <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
-                            <p class="margin-card">Más allá de la velocidad. Tecnología 5G. Toda la velocidad del chip
-                                A14 Bionic...</p>
-                            <span>$90.000</span>
-                            <div class="cta">
-                                <button class="button second_cta">Más info</button>
-                                <button class="button main_cta">Agregar al carrito</button>
-                            </div>
-                        </div>
-                    </div> -->
+                    <!-- Se muestran mediante JavaScript -->
                 </div>
             </div>
         </section>
-
-
-
-        <!-- <div class="bg-modal">
-
-            <section class="modal">
-
-                <article class="gallery">
-                    <div class="gallery-img-container">
-                        <img class="gallery-img" src="assets/imgs/lenovo-legion.jpg" alt="">
-                    </div>
-
-                    <div class="gallery-thumbnails">
-                        <img id="1" class="selected" src="assets/imgs/lenovo-legion.jpg" alt="">
-                        <img id="2" src="assets/imgs/lenovo-legion-2.jpg" alt="">
-                        <img id="3" src="assets/imgs/lenovo-legion-3.jpg" alt="">
-                        <img id="4" src="assets/imgs/lenovo-legion-4.jpg" alt="">
-                    </div>
-                </article>
-
-                <article class="content">
-
-                    <div class="details">
-                        <span class="subtitle margin-modal-subtitle">Celulares</span>
-                        <h1 class="h1 margin-modal">Apple iPhone 12 Negro</h1>
-                        <p class="description margin-modal">Más allá de la velocidad. Tecnología 5G. Toda la velocidad
-                            del chip
-                            A14 Bionic... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem et nisi quam
-                            perspiciatis voluptate dolorum porro maiores neque adipisci eius, aliquid nobis tempora
-                            laudantium laboriosam, reiciendis at rerum, maxime doloribus! Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Minima voluptate repellat animi perferendis vel architecto,
-                            optio autem doloribus. Iusto itaque quidem molestias ex at unde sapiente! Iste doloremque
-                            possimus earum.
-                        </p>
-                        <p class="price margin-modal">$90.000</p>
-                    </div>
-
-                    <div class="product-quantity">
-                        <div class="input-price">
-                            <span class="input-minus">-</span>
-                            <input class="input-number" type="text" value="0">
-                            <span class="input-plus">+</span>
-                        </div>
-                        <button class="button main_cta cta_light-bg">Agregar al carrito</button>
-                    </div>
-                </article>
-
-                <span class="close-modal">x</span>
-
-            </section>
-
-        </div> -->
-
-
-
-        <!-- <div class="bg-modal-carrito">
-
-            <section class="carrito">
-                
-                <span class="close-modal-carrito">x</span>
-
-                <div>
-                    <h1 class="h1">Mi carrito</h1>
-                    <span class="subtitle-carrito">4 items</span>
-                </div>
-
-                <div class="products-container">
-
-
-                    <div class="product-added">
-
-                        <div class="product-info">
-                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
-                            <div>
-                                <h2 class="h2">Iphone 9 Pro Max</h2>
-                                <p>$90.000</p>
-                            </div>
-                        </div>
-
-                        <div class="product-action">
-                            <span class="delete-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-                                    <path
-                                        d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
-                                </svg>
-                            </span>
-                            <span class="cantidad">Cantidad: 1</span>
-                        </div>
-                    </div>
-
-                    
-                </div>
-
-                <div>
-                    <div class="subtotal">
-                        <p>Total</p>
-                        <p>$90.000</p>
-                    </div>
-
-                    <button class="button main_cta cta_light-bg">Checkout</button>
-                    <button class="empty-button">Vaciar carrito</button>
-                </div>
-
-            </section>
-
-        </div> -->
-
-
-
-
 
     </main>
 
